2007-01-14  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/filetree.{cc,h}: Clean up the code a bit.  In particular,
	change occurrences of Gtk::TreePath to Gtk::TreeModel::Path.
	* src/filetreeprivate.{cc,h}: Likewise.

	* src/sharedptr.h (Util::SharedPtr::SharedPtr): Inline.
	(Util::SharedPtr::~SharedPtr): Remove assertion and inline.
	* src/sharedptr.cc: Remove now empty file.

	* Makefile.am (src_regexxer_SOURCES): Remove src/sharedptr.cc.

2007-01-14  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/filetree.cc (regexxer_create_file_tree): Move function to
	the global namespace.  Putting it inside an anonymous namespace
	just obfuscated the code, as this function is exported for the
	world to see.
	* src/statusline.cc (regexxer_create_status_line): Likewise.

2007-01-13  Daniel Elstner  <daniel.kitta@gmail.com>

	* MAINTAINERS: Add file for the benefit of sysadmin tools.

2007-01-13  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/globalstrings.h (conf_dir_application): New string constant
	defining the directory of regexxer in the GConf database.  This
	string literal replaces the REGEXXER_GCONF_DIRECTORY macro which
	used to be defined in the Makefile.  This global macro definition
	was inherently pointless as it was not configurable anyway.
	* src/main.cc (initialize_configuration): Use conf_dir_application
	instead of REGEXXER_GCONF_DIRECTORY.
	* src/prefdialog.cc (PrefDialog::initialize_configuration): ditto.

	* configure.ac (REGEXXER_GCONF_DIRECTORY): Remove substitution.
	(PKG_CHECK_MODULES): Add gmodule-export-2.0 to the module list to
	get the -Wl,--export-dynamic flag automatically.
	(DK_LINK_EXPORT_DYNAMIC): Remove macro invocation as it no longer
	necessary.  Also, add comments elaborating about the whole linker
	stuff.
	* Makefile.am (global_defs): Remove -DREGEXXER_GCONF_DIRECTORY.
	(src_regexxer_LDFLAGS): Get rid of $(REGEXXER_EXPORT_DYNAMIC).

	* m4/dk-export.m4 (DK_LINK_EXPORT_DYNAMIC): Remove macro.
